k8s/psbadge-svc.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: psbadge
    namespace: default
    labels:
        app: psbadge
spec:
    replicas: 1
    selector:
        matchLabels:
            app: psbadge
    strategy:
        type: RollingUpdate
        rollingUpdate:
            maxSurge: 50%
            maxUnavailable: 25%
    template:
        metadata:
            #This annotation is required for linkerd to know the cpu request.
            annotations:
                config.linkerd.io/proxy-cpu-request: "0.2"
            labels:
                app: psbadge
        spec:
            containers:
                - name: psbadge
                  image: sweatpotato/psbadge:master
                  resources:
                      requests:
                          cpu: "0.2"
                          memory: 300Mi
                      limits:
                          cpu: "1"
                          memory: 1000Mi
            imagePullSecrets:
                - name: docker-secret
---
kind: Service
apiVersion: v1
metadata:
    name: psbadge-svc
    namespace: default
    labels:
        app: psbadge
spec:
    selector:
        app: psbadge
    ports:
        - name: http
          protocol: TCP
          port: 7000
          targetPort: 7000
