k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
      - http:
          paths:
            - path: /atcoder(/|$)(.*)
              backend:
                serviceName: atcoder-svc
                servicePort: 8000
            - path: /api(/|$)(.*)
              backend:
                serviceName: psbadge-svc
                servicePort: 7000
            - path: /hasura(/|$)(.*)
              backend:
                serviceName: hasura
                servicePort: 8080
